# Testing_task

./: README.md
programming_task/: pyproject.toml
programming_task/programming_task/: constatnts.py  get_average_speed.py  get_average_speed_loop.py
programming_task/tests/: test_constants.py  test_get_average_speed.py
