[tool.poetry]
name = "programming-task"
version = "0.1.0"
description = ""
authors = ["PyJacobito <sobel.jak@gmail.com>"]
readme = "README.md"
packages = [{include = "programming_task"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
